--- a/app/src/main/res/layout/earthquake_layout.xml
+++ b/app/src/main/res/layout/earthquake_layout.xml
@@ -32,5 +32,12 @@
         android:textAlignment="textEnd"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/tv_time"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:text="3:00pm"
+        />
 
 </LinearLayout>
