--- a/app/src/main/res/layout/earthquake_layout.xml
+++ b/app/src/main/res/layout/earthquake_layout.xml
@@ -11,24 +11,27 @@
     <TextView
         android:id="@+id/tvMag"
         tools:text="@string/_5_2"
-        android:textSize="18sp"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/tvLocation"
-        tools:text="@string/nigeria"
-        android:textSize="18sp"
+        android:id="@+id/location_offset"
+        tools:text="30Km N of"
         android:layout_width="0dp"
         android:layout_weight="1"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/primary_location"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        tools:text="San Fransisco, CA"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/tvDate"
         tools:text="@string/_20th_march"
         android:layout_weight="1"
-        android:textSize="18sp"
         android:textAlignment="textEnd"
         android:layout_width="0dp"
         android:layout_height="wrap_content"/>
@@ -37,6 +40,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textAlignment="textEnd"
         tools:text="3:00pm"
         />
 
