--- a/app/src/main/res/layout/earthquake_layout.xml
+++ b/app/src/main/res/layout/earthquake_layout.xml
@@ -11,14 +11,20 @@
     <TextView
         android:id="@+id/tvMag"
         tools:text="@string/_5_2"
-        android:layout_width="0dp"
+        android:layout_width="36dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"/>
+        android:layout_gravity="center"
+        android:background="@drawable/magnitude_circle"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:layout_height="36dp"/>
 
     <TextView
         android:id="@+id/location_offset"
         tools:text="30Km N of"
         android:layout_width="0dp"
+        android:layout_marginStart="16dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"/>
     <TextView
