--- a/app/src/main/res/layout/earthquake_layout.xml
+++ b/app/src/main/res/layout/earthquake_layout.xml
@@ -1,52 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="16dp"
+    android:layout_width="match_parent"
+    android:layout_height="?android:attr/listPreferredItemHeight"
     android:minHeight="18dp"
-    android:layout_height="wrap_content">
+    android:orientation="horizontal"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/tvMag"
-        tools:text="@string/_5_2"
         android:layout_width="36dp"
-        android:layout_gravity="center"
+        android:layout_height="36dp"
+        android:layout_gravity="center_vertical"
         android:background="@drawable/magnitude_circle"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
+        android:textColor="@android:color/white"
         android:textSize="16sp"
-        android:layout_height="36dp"/>
+        tools:text="@string/_5_2" />
 
-    <TextView
-        android:id="@+id/location_offset"
-        tools:text="30Km N of"
+    <LinearLayout
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_marginStart="16dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/primary_location"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        tools:text="San Fransisco, CA "
-        android:layout_height="wrap_content"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/location_offset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-medium"
+            android:maxLines="1"
+            android:textAllCaps="true"
+            android:textColor="@color/textColorEarthquakeDetails"
+            android:textSize="12sp"
+            tools:text="30Km N of" />
+
+        <TextView
+            android:id="@+id/primary_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:textColor="@color/textColorEarthquakeLocation"
+            android:textSize="16sp"
+            tools:text="San Fransisco, CA which must wrap up to two Lines of Code" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="16dp"
+        android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvDate"
-        tools:text="@string/_20th_march"
-        android:layout_weight="1"
-        android:textAlignment="textEnd"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:textColor="@color/textColorEarthquakeDetails"
+        android:textSize="12sp"
+        tools:text="@string/_20th_march" />
+
     <TextView
         android:id="@+id/tv_time"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_gravity="end"
         android:textAlignment="textEnd"
-        tools:text="3:00pm"
-        />
-
+        android:textColor="@color/textColorEarthquakeDetails"
+        android:textSize="12sp"
+        tools:text="3:00pm" />
+    </LinearLayout>
 </LinearLayout>
