Bug fix on Margin android Linear

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/list_view"
+    android:divider="@null"
     android:orientation="vertical"
+    android:dividerHeight="0dp"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
