--- a/app/src/main/res/layout/earthquake_layout.xml
+++ b/app/src/main/res/layout/earthquake_layout.xml
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
         android:orientation="vertical">
 
     <TextView
