--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,6 @@
     android:orientation="vertical"
     android:dividerHeight="0dp"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".EarthquakeActivity">
 
 </ListView>
